--- a/styles.scss
+++ b/styles.scss
@@ -5,7 +5,17 @@ $green: #0F9D58;
 $grey: #f2f2f2;
 $black: #5F6368;
 
-#container{ 
+
+.top{
+    display: flex;
+    flex: 1; 
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: center;
+}
+
+
+.container{ 
     display: flex;
     flex: 1;
     font-family: 'Noto Sans', sans-serif;
@@ -40,6 +50,7 @@ $black: #5F6368;
 }
 
 #searchbar{
+    padding: 30px;
     display: flex; 
     width: 582px;
     flex-direction: row;
@@ -69,9 +80,9 @@ align-items: flex-start;
 
 input{
     height: auto;
-  
+    padding: 10px;
     font-size: 30px;
-   
+
     width: 500px;
     border-top-style: hidden;
     border-right-style: hidden;
@@ -85,7 +96,16 @@ input{
     flex: 1; 
     flex-direction: row;
     justify-content: center;
-    margin: 20px;
+    margin: 0 auto;
+    margin-top: 20px;
+
+    background-color: $grey;
+    color: $black;
+    margin: 11px 4px;
+    padding: 17px;
+   font-size: 15px;
+   border: 1px solid $grey; 
+   border-radius: 4px;
     // margin: 0 auto;
 }
 
@@ -97,4 +117,7 @@ button{
    font-size: 15px;
    border: 1px solid $grey; 
    border-radius: 4px;
+}
+#img{
+    margin-right: 10px;
 }
